fixed collapse scroll

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -16,28 +16,18 @@ img {}
 
 html,
 body {
-  margin: 0;
-  padding: 0;
   background: #1f1f1f;
   z-index: -2;
-  color: white !important;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
-  font-smooth: 2em;
-
-  font-size: 1rem;
 }
 
-.container {
-  display: grid;
-}
 canvas {
   background-color: #1f1f1f;
   z-index: 0;
   position: fixed;
   top: 0;
   right: 0;
-  width: 100vw;
 }
 
 .collapse {
@@ -46,7 +36,7 @@ canvas {
 }
 .moveup {
   transform: translateY(-100%);
-  transition: transform 0.2s ease-out;
+  transition: transform 0.5s ease-out;
 }
 .movedown {
   transform: translateY(100%);
